--- a/pet-page.html
+++ b/pet-page.html
@@ -77,7 +77,8 @@
                 </div>
                 <div class="petSearch col-md-12">
                     <form method="get" action="" class="header-search ng-pristine ng-valid">
-                        <img src="img/search-image.png">
+                        <input type="text" class="searchInput" placeholder="Search For Medications">
+                        <button class="btnSearch">Search<span>|</span><i class="fa fa-search"></i></button>
                     </form>
                 </div>
             </div>
